--- a/src/containers/App/App.module.css
+++ b/src/containers/App/App.module.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
 
-  height: calc(var(--size-header-height) - 1px);
+  height: calc(var(--size-header-height));
 
   padding: 0 16px;
 
@@ -18,7 +18,7 @@
   flex-direction: column;
   align-items: center;
 
-  min-height: calc(100vh - var(--size-header-height) - 64px - 128px);
+  min-height: calc(100vh - var(--size-header-height) - 128px);
 
   padding: 16px 64px 128px 64px;
 
