--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,10 @@
   --transition-elevate: box-shadow 150ms linear;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
